WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314768
[AppKit Gestures] Enclosing scroll view gesture recognizers shouldn't be categorically prevented by any of our gestures
https://bugs.webkit.org/show_bug.cgi?id=314768
Summary
[AppKit Gestures] Enclosing scroll view gesture recognizers shouldn't be cate...
Tim Horton
Reported
2026-05-13 16:54:36 PDT
[AppKit Gestures] Enclosing scroll view gesture recognizers shouldn't be categorically prevented by any of our gestures
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2026-05-13 16:54:38 PDT
<
rdar://problem/170502266
>
Tim Horton
Comment 2
2026-05-13 16:56:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64883
EWS
Comment 3
2026-05-13 17:45:52 PDT
Committed
313208@main
(2e438256b16a): <
https://commits.webkit.org/313208@main
> Reviewed commits have been landed. Closing PR #64883 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug