[AppKit Gestures] Enclosing scroll view gesture recognizers shouldn't be categorically prevented by any of our gestures https://bugs.webkit.org/show_bug.cgi?id=314768 rdar://170502266

Reviewed by Abrar Rahman Protyasha and Richard Robinson.

* Source/WebKit/UIProcess/mac/WKAppKitGestureController.mm:
(-[WKAppKitGestureController _isScrollOrZoomGestureRecognizer:]):
Fix this FIXME, which was prescient, and allow enclosing scroll view gestures
to once again recognize simultaneously with our gestures.

(-[WKAppKitGestureController _gestureRecognizer:canPreventGestureRecognizer:]):
Add a missing log here.

Canonical link: https://commits.webkit.org/313208@main